# mlog

./: .gitignore  CMakeLists.txt  README.md
include/: mlog.h
src/: mlog.c
